--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>StazioneFerroviaria</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
